
project(ACOLYTE NONE)
cmake_minimum_required(VERSION 2.8.10)

set(ACOLYTE_VERSION_MAJOR 1)
set(ACOLYTE_VERSION_MINOR 0)

set(PACKAGE_NAME Acolyte)
set(PACKAGE_VERSION "${ACOLYTE_VERSION_MAJOR}.${ACOLYTE_VERSION_MINOR}")
set(PACKAGE_STRING "${PACKAGE_NAME} ${PACKAGE_VERSION}")
set(PACKAGE_BUGREPORT "http://github.com/AcolyteSF/acolyte/issues")

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/build/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/build/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/build/bin)

set(EXT_PROJECTS_DIR ${PROJECT_SOURCE_DIR}/ext)
set(PACKAGES_DIR ${PROJECT_SOURCE_DIR}/packages)

set_property(GLOBAL PROPERTY USE_FOLDERS ON)
set(FOLDER_EXTERNAL "External")
set(FOLDER_PACKAGES "Packages")
set(FOLDER_TESTING "Testing")

enable_testing()
add_custom_target(TESTS)

add_subdirectory(${EXT_PROJECTS_DIR})
add_subdirectory(${PACKAGES_DIR})
